Thu Jan  3 15:20:25 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * utils/md5sum.c: add error handling to do_check
Wed Jan  2 16:08:02 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-source.pl: Update default ignore expression to also
    match *~ and *.swp in subdirs.

Wed Jan  2 15:00:26 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-checkbuilddeps.pl: use space seperated output instead
    of comma seperated

Tue Jan  1 14:10:55 CET 2002 Wichert Akkerman <wakkerma@debian.org>

  * archtable, scripts/dpkg-architecture.pl: Update SuperH architecture

Mon Dec 31 17:38:26 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * dselect/main.cc, main/main.c, main/query.c: no longer set LC_CTYPE
    to C since that breaks the braindead gettext.
  * dpkg-deb/build.c, lib/dbmodify.c, lib/vercmp.c, main/remove.c: Switch
    to using cisdigit and cisalpha.

Mon Dec 31 17:28:10 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * lib/utils.c: new file with general utility functions. Add
    cisalpha() and cisdigit() functions, similar to the ctype is*
    ones but which only accept C locale
  * lib/Makefile.in: add utils.c
  * include/dpkg.h: add utils.c functions

Mon Dec 31 15:25:46 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-architecture.pl: fix syntax error

Wed Nov 28 18:11:38 CST 2001 Adam Heath <doogie@debian.org>

  * scripts/dpkg-checkbuilddeps.{1,pl}: Make dpkg-checkbuilddeps always
    check for build-essential.

Wed Nov 28 17:46:23 CST 2001 Adam Heath <doogie@debian.org>

  * debian/changelog: Note that the dselect.deb split closes a bug.

Wed Nov 28 17:40:52 CST 2001 Adam Heath <doogie@debian.org>

  * scripts/update-alternatives.{pl,8}: Apply patch from debian bug 120924,
    to give update-alternatives a --list command.

Wed Nov 28 17:30:16 CST 2001 Adam Heath <doogie@debian.org>

  * utils/md5sum.c: When parsing stdin, md5sum now displays '-' as the
    filename, to match textutils md5sum.
